# quizitmo-back

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.py
alembic/: env.py  script.py.mako
alembic/versions/: 2025_04_26_init_dddff7f59bd1.py  2025_04_26_main_models_generated_699d0ba936fc.py  2025_04_27_quiz_attempt_answers_6479de0ccd20.py  2025_05_21_file_1257a9edfbd1.py  2025_05_21_handle_quiz_attempt_212c85530e1f.py
app/: main.py
app/api/: course.py  llm.py  quiz.py  service_call.py  sse.py  user.py  users.py
app/core/: auth.py  settings.py
app/db/: base_class.py  queries.py  session.py
app/models/: __init__.py  answer_option.py  course.py  course_member.py  file.py  handle_quiz_attempt.py  question.py  quiz.py  quiz_attempt.py  quiz_attempt_answer.py  user.py
app/schemas/: base.py  course.py  file.py  llm.py  quiz.py  user.py
app/services/: feedback_service.py  llm_client.py  prompts.py
test/: run.py
